# gnome-themes-clearlooks

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
debian/: changelog  control  rules
desktop-themes/: Makefile.am  Makefile.in
desktop-themes/Clearlooks/: Makefile.in
metacity-themes/: Makefile.am  Makefile.in
po/: POTFILES.in
